--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "name": "rem-craft",
   "scripts": {
     "build": "sass --watch styles/index.scss:./theme.css -s compressed --no-source-map",
-    "commit": "git add . && git cz",
+    "commit": "git add . && git cz && git push",
     "merge": "git checkout main && git merge dev",
     "release": "standard-version"
   },
