--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "build": "sass --watch styles/index.scss:./theme.css -s compressed --no-source-map",
     "commit": "git add . && git cz && git push",
-    "merge": "git checkout main && git merge dev",
+    "merge to main": "git checkout main && git merge dev",
+    "merge to dev": "git checkout dev && git merge main",
     "release": "standard-version"
   },
   "config": {
