--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "sass --watch styles/index.scss:./theme.css -s compressed --no-source-map",
     "commit": "git add . && git cz && git push",
     "merge to main": "git checkout main && git merge dev",
-    "merge to dev": "git checkout dev && git merge main",
+    "merge to dev": "git checkout dev && git merge main && git push",
     "release": "standard-version"
   },
   "config": {
