--- a/.versionrc.json
+++ b/.versionrc.json
@@ -10,7 +10,22 @@
     { "type": "test", "section": "✅ Tests | 测试" },
     { "type": "revert", "section": "⏪ Revert | 回退", "hidden": true },
     { "type": "build", "section": "📦‍ Build System | 构建/工程依赖/工具" },
-    { "type": "chore", "section": "🚀 Chore | 其他" , "hidden": true },
+    { "type": "chore", "section": "🚀 Chore | 其他", "hidden": true },
     { "type": "ci", "section": "👷 Continuous Integration | CI 配置" }
+  ],
+
+  "bumpFiles": [
+    {
+      "filename": "package.json",
+      "type": "json"
+    },
+    {
+      "filename": "package-lock.json",
+      "type": "json"
+    },
+    {
+      "filename": "theme.json",
+      "type": "json"
+    }
   ]
 }
