--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "commit": "git add . && git cz && git push",
     "merge to main": "git checkout main && git merge dev",
     "merge to dev": "git checkout dev && git merge main && git push",
-    "release": "standard-version && git push --follow-tags"
+    "release": "standard-version && git push --follow-tags",
+    "amend":"git add . && git commit --amend --no-edit && git push --force"
   },
   "config": {
     "commitizen": {
