--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "sass": "^1.53.0",
     "standard-version": "^9.5.0"
   },
-  "version": "0.5.2",
+  "version": "1.0.0",
   "description": "My theme for siyuan",
   "name": "rem-craft",
   "scripts": {
@@ -12,7 +12,7 @@
     "commit": "git add . && git cz && git push",
     "merge to main": "git checkout main && git merge dev",
     "merge to dev": "git checkout dev && git merge main && git push",
-    "release": "standard-version && git push --follow-tags",
+    "release": "standard-version -r 1.0.0",
     "amend": "git add . && git commit --amend --no-edit && git push --force"
   },
   "config": {
