--- a/package.json
+++ b/package.json
@@ -1,23 +1,28 @@
 {
-  "devDependencies": {
-    "cz-conventional-changelog": "^3.3.0",
-    "sass": "^1.53.0",
-    "standard-version": "^9.5.0"
-  },
   "version": "1.1.0",
   "description": "My theme for siyuan",
   "name": "rem-craft",
+  "private": true,
   "scripts": {
     "build": "sass --watch styles/index.scss:./theme.css -s compressed --no-source-map",
     "commit": "git add . && git cz && git push",
     "merge to main": "git checkout main && git merge dev",
     "merge to dev": "git checkout dev && git merge main && git push",
-    "release": "standard-version && git push --follow-tags origin main",
-    "amend": "git add . && git commit --amend --no-edit && git push --force"
+    "amend": "git add . && git commit --amend --no-edit && git push --force",
+    "update-theme-version": "node ./scripts/update-theme-version.js",
+    "cz": "git add . && git cz",
+    "release": "release-it"
+  },
+  "devDependencies": {
+    "@release-it/conventional-changelog": "^5.0.0",
+    "commitizen": "^4.2.4",
+    "cz-git": "^1.3.8",
+    "release-it": "^15.1.0",
+    "sass": "^1.53.0"
   },
   "config": {
     "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
+      "path": "node_modules/cz-git"
     }
   }
 }
