--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "standard-version": "^9.5.0"
   },
   "scripts": {
-    "build": "sass --watch styles/index.scss:./theme.css -s compressed --no-source-map",
+    "build": "sass --watch styles/index.scss:./theme.css -s compressed",
     "commit": "git add . && git cz",
     "merge-to-main": "git checkout main && git merge dev",
     "merge-to-dev": "git checkout dev && git merge main && git push",
