fix: :bug: 修复公式块的样式问题
closed #27

--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "commitizen": {
       "path": "node_modules/cz-git"
     }
+  },
+  "dependencies": {
+    "@semi-bot/semi-theme-universedesign": "^1.0.12"
   }
 }
