--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "build": "sass --watch styles/index.scss:theme.css -s compressed",
-    "theme": "sass --watch theme:theme -s compressed --no-source-map",
+    "theme": "sass --watch themes:themes -s compressed --no-source-map",
     "commit": "git add . && git cz",
     "merge-to-main": "git checkout main && git merge dev",
     "merge-to-dev": "git checkout dev && git merge main && git push",
