--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "build": "sass --watch styles/index.scss:theme.css -s compressed",
     "theme": "sass --watch themes:themes -s compressed --no-source-map",
+    "plugin": "sass --watch scripts/plugins:scripts/plugins -s compressed --no-source-map",
     "commit": "git add . && git cz",
     "merge-to-main": "git checkout main && git merge dev",
     "merge-to-dev": "git checkout dev && git merge main && git push",
