--- a/package.json
+++ b/package.json
@@ -1,20 +1,13 @@
 {
+  "name": "rem-craft",
   "version": "2.5.4",
   "description": "My theme for siyuan",
-  "name": "rem-craft",
-  "devDependencies": {
-    "commitizen": "^4.2.5",
-    "cz-git": "^1.3.10",
-    "sass": "^1.54.0",
-    "standard-version": "^9.5.0"
-  },
+  "main": "theme.js",
   "scripts": {
     "build": "sass --watch style/index.scss:theme.css -s compressed",
     "theme": "sass --watch theme:theme -s compressed --no-source-map",
     "plugin": "sass --watch plugin:plugin -s compressed --no-source-map",
     "commit": "git add . && git cz",
-    "merge-to-main": "git checkout main && git merge dev",
-    "merge-to-dev": "git checkout dev && git merge main && git push",
     "release": "standard-version && git push --follow-tags origin main",
     "amend": "git add . && git commit --amend --no-edit && git push --force"
   },
@@ -23,7 +16,13 @@
       "path": "node_modules/cz-git"
     }
   },
-  "dependencies": {
-    "@semi-bot/semi-theme-universedesign": "^1.0.12"
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "commitizen": "^4.2.6",
+    "cz-git": "^1.4.0",
+    "sass": "^1.56.1",
+    "standard-version": "^9.5.0"
   }
 }
