--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,28 +10,16 @@ jobs:
         name: Create Release
         runs-on: ubuntu-latest
         steps:
-            # Archive package
-            - name: Archive package
-              uses: vimtor/action-zip@v1
-              with:
-                  files: app/ asset/ plugin/ script/ theme/ util/ icon.png index.js preview.png README_en_US.md README.md theme.css theme.js theme.json
-                  dest: package.zip
+            - uses: actions/checkout@v3
 
-            - name: Create Release
-              id: create_release
-              uses: actions/create-release@v1
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-              with:
-                  tag_name: ${{ github.ref }}
-                  release_name: ${{ github.ref }}
-                  draft: false
-                  prerelease: false
-
-            # Upload package to release
-            # https://github.com/philips-labs/terraform-aws-github-runner/blob/main/.github/workflows/release.yml#L46
-            - name: Upload package.zip to the release
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            - name: Package
               run: |
-                  gh release upload ${{ steps.create_release.outputs.tag_name }} package.zip
+                  zip package.zip app asset plugin script theme util icon.png index.js preview.png README_en_US.md README.md theme.css theme.js theme.json
+
+            - name: Release
+              uses: ncipollo/release-action@v1
+              with:
+                  allowUpdates: true
+                  artifactErrorsFailBuild: true
+                  artifacts: 'package.zip'
+                  token: ${{ secrets.GITHUB_TOKEN }}
